--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to the Farmer Group's Resource Website!
+description: Feel free to bookmark this page to keep up-to-date on out collected resources.
